# secopsai

./: .direction  .gitattributes  .gitignore  404.html  ADAPTIVE_INTELLIGENCE.md  CNAME  OPENCLAW_ACTUAL_INTERNALS_MAPPING.md  OPENCLAW_IMPLEMENTATION_ROADMAP.md  OPENCLAW_INGESTION_ADAPTER_PLAN.md  OPENCLAW_LOCAL_DATA_PRIVACY_PROFILE.md  OPENCLAW_NO_SPLUNK_SOC_ARCHITECTURE.md  PROJECT_SUMMARY.md  README-ADAPTERS.md  README.md  TWITTER_POSTS.md  USER_WORKBOOK.md  adaptive-intel-daily.sh  adaptive_intelligence_pipeline.py  adaptive_rule_generator.py  adaptive_rule_validator.py  autoresearch-daily.sh  bernstein.yaml.example  botsv3_c2.csv  botsv3_convert.py  botsv3_dns_exfil.csv  botsv3_ingest.py  botsv3_lateral.csv  botsv3_privesc.csv  cli.py  com.openclaw.secopsai.adaptive-intel.plist  correlation.py  detect.py  evaluate.py  evaluate_botsv3.py  evaluate_openclaw.py  explain.py  export_real_openclaw_native.py  findings.py  generate_openclaw_attack_mix.py  index.html  (+24 more)
BEGINNER-LIVE-GUIDE/: index.html
OpenClaw-Integration/: index.html
adapters/: __init__.py  base.py
api-reference/: index.html
auto_rules/: auto_rule_auto_001.py  auto_rule_auto_002.py  auto_rule_auto_003.py  auto_rule_auto_004.py  auto_rule_auto_005.py  auto_rule_auto_006.py  auto_rule_auto_007.py  auto_rule_auto_008.py  auto_rule_auto_009.py  auto_rule_auto_010.py  auto_rule_auto_011.py  auto_rule_auto_012.py  auto_rule_auto_013.py  auto_rule_auto_014.py  auto_rule_auto_015.py  auto_rule_auto_016.py  auto_rule_auto_017.py  auto_rule_auto_018.py  auto_rule_auto_019.py  auto_rule_auto_020.py  auto_rule_auto_021.py  auto_rule_auto_022.py  auto_rule_auto_023.py  auto_rule_auto_024.py  auto_rule_auto_025.py  auto_rule_auto_026.py  auto_rule_auto_027.py  auto_rule_auto_028.py  auto_rule_auto_029.py  auto_rule_auto_030.py  auto_rule_auto_031.py  auto_rule_auto_032.py  auto_rule_auto_033.py  auto_rule_auto_034.py  auto_rule_auto_035.py  auto_rule_auto_036.py  auto_rule_auto_037.py  auto_rule_auto_038.py  auto_rule_auto_039.py  auto_rule_auto_040.py  (+33 more)
deployment-guide/: index.html
docs/: BEGINNER-LIVE-GUIDE.md  BLOG-TEMPLATES.md  OpenClaw-Integration.md  OpenClaw-Plugin.md  _headers  api-reference.md  benchmark-data.md  bernstein-integration.md  correlation-engine.md  deployment-guide.md  getting-started.md  index.md  install.sh  launch-checklist.md  launch-master-guide.md  operator-runbook.md  quick-reference.md  quickstart-beginner.md  rules-registry.md  setup.sh  supply-chain.md  threat-intel.md  threat-model.md  universal-adapters.md  upgrade.md
eval/: README.md  config.yaml
www/: _headers  (+2 more)
(+123 files in other folders)
