[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "secopsai"
version = "0.1.0"
description = "Intelligent attack detection for OpenClaw audit logs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
secopsai = "secopsai.cli:main"

[tool.setuptools]
# Package only the secopsai/ directory (your existing top-level scripts remain runnable)
packages = ["secopsai"]
