[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "secopsai"
version = "0.1.0"
description = "Intelligent attack detection for OpenClaw audit logs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
secopsai = "secopsai.cli:main"

[tool.setuptools]
# Install the package plus the top-level helper modules/scripts that the CLI imports.
packages = ["secopsai", "openclaw_adapters"]
py-modules = [
  "confidence",
  "detect",
  "evaluate",
  "evaluate_openclaw",
  "explain",
  "export_real_openclaw_native",
  "feedback",
  "findings",
  "generate_openclaw_attack_mix",
  "ingest_openclaw",
  "openclaw_findings",
  "openclaw_plugin",
  "openclaw_prepare",
  "prepare",
  "run_openclaw_live",
  "shadow",
  "soc_store",
  "swarm",
  "tune",
  "twilio_whatsapp_webhook",
  "whatsapp_openclaw_router",
]
